# WineResources

./: LICENSE  README.md
docs/: patches.md  resources.md  status.md
examples/quickstart/autosdk/: README.md  assemble.py
examples/quickstart/autosdk/context/: Dockerfile
examples/quickstart/create-installed-build/: README.md  compile.py
examples/quickstart/package-project/: README.md  package.py
examples/quickstart/wrap-installed-build/: README.md  build.py  wrap.py
examples/quickstart/wrap-installed-build/context/: Dockerfile
libmemory-patches/: cgroups.c  libmemory-patches.h  logger.c  logger.h  overcommit.c
memory-shim/: memory-shim.cpp
patches/: cert-set-certificate-context-property.patch  cmd-fixes.patch  cryptnet-file-stream-leak-fix.patch  findstr-fixes.patch  gdk_so_conditional_accept.patch  getmodulefilename.patch  globalmemorystatusex-cache-window.patch  imagegetdigeststream.patch  minidump-apiset.patch  msvcrt-max-file-streams.patch  processorgroup-V1.mbox  selective-smaps-rollup.patch  wine-overcommit-prevention-support.patch
tools/longpath-test-suite/: CMakeLists.txt  build.bat  build.sh  lorem.txt  readme.md  run.bat  run.sh
tools/longpath-test-suite/src/: main.cpp
tools/symbol-file-indexer/: index-symbols.py
tools/symbol-file-indexer/indexer/: indexing.cpp  indexing.h  main.cpp  structures.h
tools/symbol-file-indexer/validation/: validate.bat  validate.py
